Fix overflow on chat bubbles

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -102,11 +102,11 @@ body {
 }
 
 .messageContainer#Other .messageBox {
-  height: auto;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  /* height: auto; */
+  /* padding-bottom: 5px; */
+  /* padding-top: 5px; */
   padding-right: 5px;
-  width: 200px;
+  width: 225px;
   background-color: #5db5f8;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -116,17 +116,23 @@ body {
 }
 
 .messageContainer#You .messageBox {
-  height: auto;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  /* height: auto; */
+  /* padding-bottom: 5px; */
+  /* padding-top: 5px; */
   padding-right: 5px;
-  width: 200px;
+  width: 225px;
   background-color: #0091ff;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   border-radius: 7px;
   display: grid;
   place-items: center;
+}
+
+.messageBox p {
+  padding-left: .3rem;
+  width: 220px;
+  overflow-wrap: break-word;
 }
 
 .messageContainer#You{
